# ut-core-controls

./: .gitignore  README.md  notes.txt
Helmholtz Code/: Arduino Helmholtz  Calibration.ino  Calibration.py  Python Simulation  README.md
airBearingDemo/: README.md
airBearingDemo/ADCSCore/: CMakeLists.txt
airBearingDemo/ADCSCore/components/: ADCSCore.cpp  ADCSCore.hpp  MotorDriver.cpp  MotorDriver.hpp  core_ControllerBDot.cpp  core_ControllerBDot.hpp  core_ControllerManager.cpp  core_ControllerManager.hpp  core_ControllerNDI.cpp  core_ControllerNDI.hpp  core_HelperFunctions.cpp  core_HelperFunctions.hpp  core_MTQAllocator.cpp  core_MTQAllocator.hpp  core_Math.hpp  core_Observer.cpp  core_Observer.hpp  core_Parameters.hpp
airBearingDemo/ADCSCore/plant/: Dynamics.cpp  Dynamics.hpp  Plant_Parameters.hpp  Sensors.cpp  Sensors.hpp  plant_main.cpp
airBearingDemo/ADCS_Calculations/: Calc_sensor_stdev.m
airBearingDemo/Harbenger_CONTROL/: README.md  design.md
airBearingDemo/Harbenger_CONTROL/Detumbling/: Main.m  parameters.m
airBearingDemo/Harbenger_CONTROL/KICAD/: bldc_motor_driver.kicad_sch  brushed_motor_driver.kicad_sch  control.kicad_dru  control.kicad_prl  control.kicad_pro  control.kicad_sch  imu.kicad_sch  magnetometer.kicad_sch  magnetorquer.breakout.kicad_sch  magnetorquer.kicad_sch  magnetorquers.kicad_sch  reaction_wheel.kicad_sch  reaction_wheels.kicad_sch  star_tracker.kicad_sch  sun_sensor.kicad_sch
airBearingDemo/Harbenger_CONTROL/Machining/: Duravertical Library - 29Aug2024.tools  Pyramid - Frame.stl  Pyramid mold (lid).stl  Pyramid mold(base).stl  Pyramid_nohole v1 v1.f3d  jig (drilling holes).f3d
airBearingDemo/Harbenger_CONTROL/Matlab Scripts/: cameracalib.m  coordinates.m  coordinates_new.m  dots.m  motorcalcs.m  pointing_accuracy.m
airBearingDemo/Harbenger_CONTROL/Progress Reports - Fall/: Progress Report - Week 1.docx  Progress Report - Week 10.docx  Progress Report - Week 11.docx  Progress Report - Week 12.docx  Progress Report - Week 2.docx  Progress Report - Week 3.docx  Progress Report - Week 4.docx  Progress Report - Week 5.docx  Progress Report - Week 6.docx  Progress Report - Week 7.docx  Progress Report - Week 8.docx  Progress Report - Week 9.docx  Semester 1 Progress Summary.docx
airBearingDemo/Harbenger_CONTROL/Progress Reports - Spring/: Progress Report - Week 1.docx  Progress Report - Week 2.docx  Progress Report - Week 3.docx  Progress Report - Week 4.docx  Progress Report - Week 5.docx  Progress Report - Week 6.docx  Progress Report - Week 7.docx  Progress Report - Week 8.docx  Progress Report - Week 9.docx  Semester 2 Progress Summary.docx
airBearingDemo/Harbenger_CONTROL/Research/: Control System Research.docx  Mass Moment of Inertia - Ring + Rod + Motor.xlsx  Mass Moment of Inertia - Sparkvue.xlsx  Ordering Sheet - Control.xlsx  Power.xlsx  Spherical Air Bearing.paper.url  Weight.xlsx
airBearingDemo/Harbenger_CONTROL/Reviews/: 1 - Conceptual Design Review.pptx  3 - Purchasing Template - Controls.xlsx  Control Order - 2.12.25.xlsx  Critical Design Review.pptx  CubeSat CDR Format Nov 22 2024.pptx  DeltaCDR.pptx  Gantt Chart Controls.xlsx  Gantt Chart.xlsx  OldDONOTUSEPreliminary Design Review.pptx  Preliminary Design Review.pptx
airBearingDemo/Harbenger_CONTROL/RustControl/: cargo.toml
airBearingDemo/Harbenger_CONTROL/Simulation/: Animation.m  Controller.m  Dynamics.m  MRP2quat.m  Observer.m  Parameters.m  README.md  Simulation.m  invquatmultiply.m  quat2MRP.m  tau2PWM.m  (+3 more)
airBearingDemo/Harbenger_CONTROL/Simulation - Test/: Animation.m  ClaudeTest.m  Controller.m  Dynamics.m  Observer.m  PWM2tau.m  Parameters.m  RPM2tau.m  Sensors.m  Simulation.m  calculate_gains.m  cross_mat.m  gains.mat  integrator.rs  invquatmultiply.m  modrod_state_space.m  plotEvenlySpacedSpherePoints.m  plotQuaternionAxes.m  quat2MRP.m  quatmultiply.m  simple_bdot_algo.m  simple_bdot_algo1.m  tau2RPM.m
airBearingDemo/MATLAB/: Animation.m  CSVChecker.m  Controller.m  ControllerBdot.m  ControllerNDI.m  EquivalenceCheck.m  Parameters.m  Plotter.m  Sensors.m  Simulation.m  world_mag_model.txt
airBearingDemo/boards/cdh/: CMakeLists.txt  prj.conf
airBearingDemo/boards/cdh/docs/: CubeSat Command and Data Handling.docx  modeStateMachineCDH.txt  pesudoCodeFlowCDH.txt  pseudoCodeCDH.cpp  telemetryPipelineCDH.txt
airBearingDemo/boards/cdh/include/: cdh_can_proto.h  cdh_events.h  cdh_modes.h
airBearingDemo/boards/cdh/src/: can_bus.c  can_bus.h  ground_cmds.c  ground_cmds.h  internal_sensors.c  internal_sensors.h  main_app.cpp  soh.c  soh.h
airBearingDemo/ground/: md03-rot2.py  readingRadioWaves.py  tracking.py
airBearingDemo/orion/: CMakeLists.txt  Kconfig  prj.conf
airBearingDemo/orion/apps/: gps_test_app.c
airBearingDemo/orion/boards/: esp32_devkitc_wroom.overlay
airBearingDemo/orion/drivers/orion_b16/: orion_b16_commands.c  orion_b16_commands.h  orion_b16_config.c  orion_b16_driver.c  orion_b16_driver.h  orion_b16_messages.h  orion_b16_parser.c  orion_b16_parser.h  orion_b16_protocol.h
airBearingDemo/orion/simulators/: gps_simulator.c
airBearingDemo/orion/tests/: CMakeLists.txt  test_orion_b16.c
airBearingDemo/sim/: .gitignore
forOrbit/ADCSCore/: ADCSCore.cpp  CMakeLists.txt
forOrbit/ADCSCore/components/: ADCSCore.cpp  ADCSCore.hpp  core_ControllerBDot.cpp  core_ControllerBDot.hpp  core_ControllerManager.cpp  core_ControllerNDI.cpp  core_ControllerNDI.hpp  core_Math.hpp  core_Observer.cpp  core_Observer.hpp  core_Parameters.hpp  core_ReferenceGenerator.cpp  core_ReferenceGenerator.hpp
forOrbit/ADCSCore/plant/: Dynamics.cpp  Dynamics.hpp  Plant_Parameters.hpp  Sensors.cpp  Sensors.hpp  plant_main.cpp  two_body.cpp  two_body.hpp
forOrbit/MATLAB/: EquivalenceCheck.m  MATLABCSV.m  two_body.m
simulation/: Animation.m  CMakeLists.txt  EquivalenceCheck.m  Parameters.m  Plotter.m  README.md  orbit_Animation.m  orbit_Parameters.m  orbit_Plotter.m
starTracker_ADCSCore/RPi/: collect_photos.py  design_day_demo.py  matched.mtA  matched.mtB  matched.unA  matched.unB  new_cat  sext  stt_flight_param.py  utu_flight.py  utu_test_runner.py
(+85 files in other folders)
